# bare-android

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.gradle  package-lock.json  package.json  settings.gradle
.github/workflows/: test.yml
app/: CMakeLists.txt  build.gradle  google-services.json
app/libs/: .gitignore
app/src/main/: AndroidManifest.xml
app/src/main/assets/: push.js
app/src/main/c/: CMakeLists.txt  MainActivity.c  Worker.c
app/src/main/java/: MainActivity.java
app/src/main/java/com/holepunch/bare/: MainActivity.java  Worker.java
app/src/main/java/to/holepunch/bare/android/: CustomMessagingService.java  MainActivity.java  MainActivity.kt  MessagingService.kt  MyConnectionService.kt
app/src/main/java/to/holepunch/bare/android/utils/: NotificationManagerUtils.kt  NotificationUtils.kt  TelecomUtils.kt
app/src/main/java/to/holepunch/bare/android/voip/: CallActionReceiver.kt  CallActivity.kt  CallManager.kt  Connection.kt  ConnectionService.kt  PhoneAccountManager.kt  VoIPManager.kt
app/src/main/js/: app.js  push.js
